force-app/main/default/objects/OpportunityLineItem/fields/Attendees_Per_Session__c.field-meta.xml
<CustomField>
    <fullName>Attendees_Per_Session__c</fullName>
    <label>Attendees Per Session</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>