force-app/main/default/objects/OpportunityLineItem/fields/BC_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>BC_Sync_Status__c</fullName>
    <description>Sync Status of record with Business Central. Sync is driven from the Opportunity.</description>
    <inlineHelpText>Sync Status of record with Business Central. Sync is driven from the Opportunity.</inlineHelpText>
    <label>BC Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>