force-app/main/default/objects/OpportunityLineItem/fields/BC_Synced_Instances__c.field-meta.xml
<CustomField>
    <fullName>BC_Synced_Instances__c</fullName>
    <label>BC Synced Instances</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BC_Synced_Instances_c</valueSetName>
    </valueSet>
</CustomField>