force-app/main/default/objects/OpportunityLineItem/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <description>Shows the related product&apos;s billing type, used for display in the mini layout for editing products on an opportunity</description>
    <formula>TEXT(PricebookEntry.Product2.Billing_Type__c)</formula>
    <label>Billing Type</label>
    <type>Text</type>
</CustomField>