force-app/main/default/objects/OpportunityLineItem/fields/Customer_Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product_Status__c</fullName>
    <description>Used to enqueue and track processing for records that require the creation of a Customer Product record to grant product access in the customer portal.

Pending: Set in before triggers for records that     match criteria. Should never find records in this status as they’re almost immediately transitioned to Queued.
Queued: Set for records for which a Platform Event to process the records has been created
Completed: Set once a record has successfully been processed
Failed: Set if a record fails processing in any way</description>
    <label>Customer Product Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>