force-app/main/default/objects/OpportunityLineItem/fields/Incremental_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Pricing__c</fullName>
    <description>At the time of creation the value for this field is set from the related Price Book Entry in the flow &quot;Opportunity Product - Set Overage Fields&quot;. Deal Support Process references the Opportunity Product value to calculate incremental pricing.</description>
    <label>Incremental Pricing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>