force-app/main/default/objects/OpportunityLineItem/fields/Line_Discount__c.field-meta.xml
<CustomField>
    <fullName>Line_Discount__c</fullName>
    <label>Line Discount %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>