force-app/main/default/objects/OpportunityLineItem/fields/Line_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Discount_Amount__c</fullName>
    <label>Line Discount Amount</label>
    <length>25</length>
    <type>Text</type>
</CustomField>