force-app/main/default/objects/OpportunityLineItem/fields/Minimum_Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Number_of_Participants__c</fullName>
    <description>At the time of creation the value for this field is set from the related Price Book Entry in the flow &quot;Opportunity Product - Set Overage Fields&quot;. Deal Support Process references the Opportunity Product value to calculate incremental pricing.</description>
    <label>Minimum Number of Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>