force-app/main/default/objects/OpportunityLineItem/fields/pse__Added_To_Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Added_To_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this was previously added to a project during the create project process. If checked it will not be picked up in the next create project</description>
    <label>Added To Project</label>
    <type>Checkbox</type>
</CustomField>