force-app/main/default/objects/OpportunityLineItem/fields/pse__IsServicesProductLine__c.field-meta.xml
<CustomField>
    <fullName>pse__IsServicesProductLine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsServicesProductLine</label>
    <type>Checkbox</type>
</CustomField>